--- a/webapp1/templates/index.html
+++ b/webapp1/templates/index.html
@@ -33,27 +33,32 @@
     
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">TEAMER</a>
+    <a class="navbar-brand" href="/webapp1">TEAMER</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/webapp1/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/webapp1/firstpost">Post1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Delete profile</a>
+            <a class="nav-link" href="/webapp1/secondpost">Post2</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/webapp1/signin" tabindex="-1" aria-disabled="true">sign in</a>
         </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search people</button>
+        <button class="btn btn-outline-success" type="submit">Search post</button>
       </form>
     </div>
   </div>
 </nav>
+{% block content %}
+{% endblock %}
 </body>
