--- a/webapp1/templates/index.html
+++ b/webapp1/templates/index.html
@@ -48,6 +48,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/webapp1/secondpost">Post2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/webapp1/createpost">Create Post</a>
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="/webapp1/signin" tabindex="-1" aria-disabled="true">sign in</a>
         </li>
